--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>{{ site.title}} - {{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/JOVE/assets/css/style.css">
   </head>
   <body>
     <nav>
-      <a href="/">Home</a>
+      <a href="/JOVE">Home</a>
     </nav>
     <h1>{{ site.title }} - {{page.title}}</h1>
     <section>
