--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,6 +10,10 @@
       <a href="/JOVE">Home</a>
     </nav>
     <h1>{{ site.title }} - {{page.title}}</h1>
+    THEME: {{ site.theme }}
+    <br />
+    PAGES: {{ site.pages }}
+    <br />
     <section>
       {{ content }}
     </section>
