--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,16 +1,24 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+  </head>
   <body>
-
-*****TEST*****
-
-    {% include header.html %}
-
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
+TEST2
+    <nav>
+      <a href="/JOVE">Home</a>
+      <a href="/JOVE/blog/part-3-cube/textures">link1</a>
+      <a href="JOVE/blog/part-3-cube/textures">link2</a>
+      <a href="blog/part-3-cube/textures">link3</a>
+    </nav>
+    <h1>{{ page.title }}</h1>
+    <section>
+      {{ content }}
+    </section>
+    <footer>
+      FOOTER
+    </footer>
   </body>
 </html>
