--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/JOVE/assets/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
 TEST2
