--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/JOVE/assets/css/style.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body>
-TEST 3
+TEST 4
     <nav>
-      <a href="/JOVE">Home</a>
-      <a href="/JOVE/blog/part-3-cube/textures">link1</a>
-      <a href="JOVE/blog/part-3-cube/textures">link2</a>
-      <a href="blog/part-3-cube/textures">link3</a>
+      <ul>
+        <li><a href="/JOVE">Home</a></li>
+        <li><a href="/JOVE/blog/part-3-cube/textures">link1</a></li>
+        <li><a href="blog/part-3-cube/textures">link3</a></li>
+      </ul>
     </nav>
     <h1>{{ page.title }}</h1>
     <section>
