--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/JOVE/assets/css/style.css">
   </head>
   <body>
-TEST 4
+TEST 5
     <nav>
       <ul>
         <li><a href="/JOVE">Home</a></li>
