--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,14 +1,7 @@
-<header class="site-header">
-  HEADER
-  <div class="navbar">
-    <div class="navbar-inner">
-      <div class="container">
-        <ul class="nav">
-          <li><a href="blog/part-3-cube/textures">relative</a></li>
-          <li><a href="JOVE/blog/part-3-cube/textures">relative + JOVE</a></li>
-          <li><a href="/JOVE/blog/part-3-cube/textures">relative + slashJOVE</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
+<header>
+HEADER
+  <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+  <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
+HEADER END
 </header>
+      
