--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
-  {%- include head.html -%}
-
+  {% include head.html %}
   <body>
-
-    {%- include header.html -%}
-
+    {% include header.html %}
+    TITLE <h1>{{ page.title }}</h1>
     <main class="page-content" aria-label="Content">
-    
-    ********* HELLO ***********
-    
       <div class="wrapper">
         {{ content }}
       </div>
-      
     </main>
-
-    {%- include footer.html -%}
-
+    {% include footer.html %}
   </body>
-
 </html>
