--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,8 +1,8 @@
 <header>
-  <img src="/assets/image/logo.jpg" alt="Logo"></img>
+  <img src="/JOVE/assets/image/logo.jpg" alt="Logo"></img>
   <p>{{ site.description | default: site.github.project_tagline }}</p>
   <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/blog/part-4-models/model.loader">models</a></li>
+    <li><a href="/JOVE">Home</a></li>
+    <li><a href="/JOVE/blog/part-4-models/model.loader">models</a></li>
   </ul>
 </header>
