--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,8 +4,8 @@
   <body>
     {% include header.html %}
     <main class="page-content" aria-label="Content">
-      TITLE <h1>{{ page.title }}</h1>
       <div class="wrapper">
+        <h1>{{ page.title }}</h1>
         {{ content }}
       </div>
     </main>
