--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,5 +1,4 @@
-<header>
-  <div class="header">
+  <div class="left">
     <img src="/JOVE/assets/image/logo.jpg" alt="Logo"></img>
     <p>{{ site.description | default: site.github.project_tagline }}</p>
     <ul>
@@ -7,4 +6,4 @@
       <li><a href="/JOVE/blog/part-4-models/model.loader">models</a></li>
     </ul>
   </div>
-</header>
+
