--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -3,36 +3,14 @@
 
 @import "{{ site.theme }}";
 
-left {
-  padding: 25px 20px 40px 20px;
-  margin: 0;
+.left {
+  height: 100%;
+  width: 160px;
   position: fixed;
+  z-index: 1;
   top: 0;
-  left:0;
-  right:0;
-  width: 100%;
-  text-align: center;
-  box-shadow: 1px 0px 2px rgba(0,0,0,.75);
-  z-index:99;
-  -webkit-font-smoothing:antialiased;
-  min-height: 76px;
-
-  h1 {
-    font: 40px/48px Arial, sans-serif;
-    color: #f3f3f3;
-    text-shadow: 0px 2px 0px #235796;
-    margin: 0px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    -ms-text-overflow: ellipsis;
-  }
-
-  p {
-    color: #d8d8d8;
-    text-shadow:rgba(#000, 0.2) 0 1px 0;
-    font-size: 18px;
-    margin: 0px;
-  }
+  left: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
 }
+
