--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,3 +1,19 @@
+
+
+
+<style type="text/css">
+    .left {
+      height: 100%;
+      width: 160px;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      overflow-x: hidden;
+      padding-top: 20px;
+    }
+</style>
+
   <div class="left">
     <img src="/JOVE/assets/image/logo.jpg" alt="Logo"></img>
     <p>{{ site.description | default: site.github.project_tagline }}</p>
