Tidy pass on swapchain
Added header links
Tidy pass on swapchain

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,6 +1,3 @@
-
-
-
 <style type="text/css">
     .left {
       height: 100%;
@@ -14,12 +11,15 @@
     }
 </style>
 
-  <div class="left">
-    <img src="/JOVE/assets/image/logo.jpg" alt="Logo"></img>
-    <p>{{ site.description | default: site.github.project_tagline }}</p>
-    <ul>
-      <li><a href="/JOVE">Home</a></li>
-      <li><a href="/JOVE/blog/part-4-models/model.loader">models</a></li>
-    </ul>
-  </div>
-
+<div class="left">
+  <img src="/JOVE/assets/image/logo.jpg" alt="Logo"></img>
+  <p>{{ site.description | default: site.github.project_tagline }}</p>
+  <ul>
+    <li><a href="/JOVE">Home</a></li>
+    <li><a href="/JOVE/blog/part-1-generation/generation">Code Generating the Vulkan API</a></li>
+    <li><a href="/JOVE/blog/part-2-triangle/instance">Rendering a Triangle</a></li>
+    <li><a href="/JOVE/blog/part-3-cube/vertex-buffers">Rendering a 3D Cube</a></li>
+    <li><a href="/JOVE/blog/part-4-models/model-loader">Loading a Model</a></li>
+  </ul>
+  <a href="https://github.com/stridecolossus/JOVE">View on <strong>GitHub</strong></a>
+</div>
