--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -12,7 +12,7 @@
 </style>
 
 <div class="left">
-  <img src="/JOVE/assets/image/logo.jpg" alt="Logo"></img>
+  <p><img src="/JOVE/assets/image/logo.jpg" alt="Logo"></img></p>
   <p>{{ site.description | default: site.github.project_tagline }}</p>
   <ul>
     <li><a href="/JOVE">Home</a></li>
@@ -21,5 +21,6 @@
     <li><a href="/JOVE/blog/part-3-cube/vertex-buffers">Rendering a 3D Cube</a></li>
     <li><a href="/JOVE/blog/part-4-models/model-loader">Loading a Model</a></li>
   </ul>
-  <a href="https://github.com/stridecolossus/JOVE">View on <strong>GitHub</strong></a>
+  <p><a href="https://github.com/stridecolossus/JOVE">View on <strong>GitHub</strong></a></p>
+  <p><small>Hosted on GitHub Pages &mdash; using the <a href="https://github.com/jekyll/minima">minima</a> theme</small></p> 
 </div>
