--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -9,6 +9,10 @@
       overflow-x: hidden;
       padding-top: 20px;
     }
+
+    @media screen and (max-width: 768px) {
+        .left {display:none;}
+    }
 </style>
 
 <div class="left">
